# Android-Native-Mod-Template

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/polarmods/androidmodtemplate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Engine/: Color.h  Quaternion.h  Rect.h  Unity.h  Vector2.h  Vector3.h
app/src/main/cpp/Etc/: Logging.h  Obfuscate.h  Utils.h
app/src/main/cpp/Hooking/ARMPatch/: ARMPatch.cpp  ARMPatch.h
app/src/main/cpp/Mod/: Chams.h  Functions.h  Hooks.h  Offsets.h  Patch.h
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/polarmods/androidmodtemplate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
